--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </header>
         <main>
-            <h2>前衛技術とは何か</h2>
+            <h1>前衛技術とは何か</h1>
             <p>
                 前衛芸術に準えうる我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、支配と疎外の元凶は人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なのでハイデガー左派として被投性よりも現存在の投企を強調し、体制の屋台骨に過ぎなかった技術を我々の側に奪取し前衛化し、スペクタクルの転用と総破壊による”状況の構築”そして存在論的革命へと進撃し、現存在と技術との自由な関係を構築する。
             </p>
@@ -27,7 +27,7 @@
             </p>
             <p></p>
             <p>”エンジニアの廃止こそ技術の実現である”　ー秋井行人</p>
-            <h2>我が同盟が実装した前衛技術</h2>
+            <h1>我が同盟が実装した前衛技術</h1>
             <p>世界に対峙して自己を定立する為に本来的な技術を開発する。</p>
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
             <ul>
@@ -38,16 +38,17 @@
                     </p>
                 </li>
             </ul>
-            <h3>法的転用(détournement)</h3>
+            <h2>著作権の転用</h2>
             <p>
-                全ての前衛技術ソフトウェアは弁護士泣かせの
+                全ての前衛技術ソフトウェアは、弁護士泣かせの
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
-                によって配布されています。
+                によって配布されている。
             </p>
+            <p>détournement!!!</p>
             <h2>入党するには</h2>
-            <p>大人しくオルグされるのを待ちましょう。</p>
+            <p>大人しくオルグされるのを待ちな。</p>
             <hr size="1" />
-            <marquee scrollamount="15">
+            <marquee scrollamount="20">
                 <span>アナキスト独裁による総破壊！！</span>
                 <span>黒色テロルで自由の敵を大虐殺！！</span>
                 <span>日本政府はテロに屈しろ！！</span>
