--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span>黒色テロルで自由の敵を大虐殺！！</span>
                 <span>日本政府はテロに屈しろ！！</span>
                 <span>世界革命戦争万歳！！！</span>
-                <span>ファシズム万歳！！！</span>
+                <span>ファッシズム万歳！！！</span>
             </marquee>
         </main>
     </body>
