--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
                 によって配布されている。
             </p>
-            <h2>入党するには</h2>
-            <p>大人しくオルグされるのを待ちな。</p>
+            <div class="news">
+                <h1>Twitterイーロン独裁弾劾！</h1>
+            </div>
             <hr size="1" />
             <marquee scrollamount="20">
                 <span>アナキスト独裁による総破壊！！</span>
