--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
                 によって配布されている。
             </p>
-            <div class="news">
-                <h1>Twitterイーロン独裁弾劾！</h1>
-            </div>
+
             <hr size="1" />
-            <marquee scrollamount="20">
+            <p>
                 <span>アナキスト独裁による総破壊！！</span>
                 <span>黒色テロルで自由の敵を大虐殺！！</span>
                 <span>日本政府はテロに屈しろ！！</span>
                 <span>世界革命戦争万歳！！！</span>
                 <span>ファッシズム万歳！！！</span>
-            </marquee>
+            </p>
         </main>
     </body>
 
@@ -109,6 +107,10 @@
                     letter-spacing: 10px;
                     font-size: 30px;
                     behavior: slide;
+                }
+                .news {
+                    padding: 20px;
+                    background-color: deepskyblue;
                 }
             }
         }
