--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <span>世界革命戦争万歳！！！</span>
                 <span>ファッシズム万歳！！！</span>
             </p>
+            <p>世界に冠たる前技同に栄光あれ！！！</p>
         </main>
     </body>
 
