--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     font-size: 18px;
                 }
                 a {
-                    color: crimson;
+                    color: firebrick;
                     text-decoration: none;
                     &:hover {
                         text-decoration: underline;
